tests/errors/plus_one_arg.rs
use macro_lisp::lisp;

fn main() {
    lisp!((+ x));
}
