tests/errors/plus_one_arg.stderr
error: expected expression, found `+`
 --> tests/errors/plus_one_arg.rs:4:12
  |
4 |     lisp!((+ x));
  |            ^ expected expression
